--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="zh-TW">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TWSE 漲幅區間篩選器</title>
-    <meta name="description" content="台股漲幅區間篩選器 - 即時篩選、技術分析、回測功能" />
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/png" href="/favicon.png?v=2" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>TWSE 漲幅區間篩選器</title>
+  <meta name="description" content="台股漲幅區間篩選器 - 即時篩選、技術分析、回測功能" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
